@@ -1,15 +1,21 @@
 package ru.vsu.amm.java.util;
 
+import java.sql.Time;
 import java.time.LocalTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TimeParser {
     public static List<LocalTime> parseTimes(String[] times) {
         return Arrays.stream(times)
                 .filter(it -> it != null && !it.isEmpty())
                 .map(LocalTime::parse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public static List<LocalTime> parseTimes(Time[] times) {
+        return Arrays.stream(times)
+                .map(Time::toLocalTime)
+                .toList();
     }
 }
